# omnibase_spi

./: .pre-commit-config.yaml  AGENT.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: auto-merge.yml  check-handshake.yml  cr-thread-gate.yml
docs/: CONTRIBUTING.md  GLOSSARY.md  QUICK-START.md  README.md
docs/api-reference/: CONTAINER.md  CONTRACTS.md  CORE.md  EVENT-BUS.md  EXCEPTIONS.md  FILE-HANDLING.md  HANDLERS.md  MCP.md  MEMORY.md  NETWORKING.md  NODES.md  README.md  REGISTRY.md  VALIDATION.md  WORKFLOW-ORCHESTRATION.md
docs/architecture/: DEPENDENCY-DIRECTION.md  README.md
docs/developer-guide/: README.md
scripts/: check_unused_exports.py
scripts/validation/: check_ai_slop.py  validate_namespace_isolation.py  validate_spi_protocols.py
src/omnibase_spi/: __init__.py  exceptions.py
src/omnibase_spi/contracts/defaults/: default_github_pr_poller.yaml
src/omnibase_spi/contracts/delegation/: contract_attachment.py  contract_compliance_result.py  contract_delegated_response.py  contract_delegation_attribution.py
src/omnibase_spi/contracts/enrichment/: contract_enrichment_result.py
src/omnibase_spi/contracts/events/: contract_git_hook_event.py  contract_github_pr_status_event.py  contract_linear_snapshot_event.py
src/omnibase_spi/contracts/measurement/: contract_aggregated_run.py  contract_llm_call_metrics.py  contract_measured_attribution.py  contract_measurement_context.py  contract_measurement_event.py  contract_phase_metrics.py  contract_pr_validation_rollup.py  contract_producer.py  contract_promotion_gate.py  contract_savings_estimate.py
src/omnibase_spi/contracts/pipeline/: contract_artifact_pointer.py  contract_auth_gate_input.py  contract_checkpoint.py  contract_execution_context.py  contract_hook_invocation.py  contract_hook_invocation_result.py  contract_node_error.py  contract_node_operation_request.py  contract_node_operation_result.py  contract_repo_scope.py  contract_rrh_result.py  contract_run_context.py  contract_session_index.py  contract_work_authorization.py
src/omnibase_spi/contracts/projections/: __init__.py  contract_projection_result.py
src/omnibase_spi/contracts/services/: contract_database_service_types.py  contract_node_receipt.py  contract_project_tracker_types.py  contract_source_control_types.py
src/omnibase_spi/contracts/shared/: contract_check_result.py  contract_verdict.py
src/omnibase_spi/contracts/validation/: contract_attribution_record.py  contract_pattern_candidate.py  contract_validation_plan.py  contract_validation_result.py  contract_validation_run.py  contract_validation_verdict.py
src/omnibase_spi/effects/: node_projection_effect.py
src/omnibase_spi/protocols/: __init__.py  primitive_effect_executor.py
src/omnibase_spi/protocols/agent/: __init__.py  protocol_remote_agent_transport.py
src/omnibase_spi/protocols/contracts/: protocol_handler_contract.py
src/omnibase_spi/protocols/dashboard/: __init__.py  protocol_dashboard_event_subscriber.py  protocol_dashboard_service.py  protocol_registry_query_service.py  protocol_widget_renderer.py
src/omnibase_spi/protocols/effects/: __init__.py  protocol_effect.py  protocol_git_hook_effect.py  protocol_github_pr_poller_effect.py  protocol_linear_snapshot_effect.py
src/omnibase_spi/protocols/intelligence/: protocol_intent_graph.py
src/omnibase_spi/protocols/observability/: protocol_hot_path_metrics_sink.py
src/omnibase_spi/protocols/projections/: __init__.py  protocol_projection_reader.py  protocol_projection_view.py  protocol_projector.py
src/omnibase_spi/protocols/projectors/: __init__.py  protocol_event_projector.py  protocol_projector_loader.py
src/omnibase_spi/protocols/runtime/: __init__.py  protocol_domain_plugin.py  protocol_handleable.py  protocol_handler_ownership_query.py  protocol_handler_resolver.py
src/omnibase_spi/protocols/services/: protocol_project_tracker.py  protocol_ticket_service.py
src/omnibase_spi/protocols/storage/: protocol_graph_database_handler.py  protocol_idempotency_store.py
src/omnibase_spi/protocols/validation/: protocol_constraint_validator.py
src/omnibase_spi/registry/: event_registry.py
tests/: test_protocol_snapshot.py  test_unused_exports.py
tests/protocols/runtime/: test_protocol_handleable.py  test_protocol_handler_ownership_query.py  test_protocol_handler_resolver.py
tests/snapshots/: protocol_signatures.json
tests/unit/: test_contract_model_alignment.py  test_skill_routing_error.py
tests/unit/contracts/: test_no_forbidden_imports.py  test_node_receipt.py
tests/unit/contracts/measurement/: test_contract_measurement_context.py  test_measurement_contracts.py  test_vts.py
tests/unit/contracts/pipeline/: test_pipeline_contracts.py
tests/unit/effects/: test_node_projection_effect_impl.py
tests/unit/protocols/: test_resilience_protocols.py
tests/unit/protocols/agent/: test_protocol_remote_agent_transport.py
tests/unit/protocols/effects/: test_primitive_effect_executor.py
tests/unit/protocols/event_bus/: test_protocol_event_bus_producer_handler.py  test_protocol_event_publisher.py
tests/unit/protocols/projectors/: __init__.py
tests/unit/protocols/services/: test_service_protocols.py
tests/unit/protocols/storage/: test_protocol_graph_database_handler.py  test_protocol_vector_store_handler.py
